Change dataset source from retail_sales_data to synthetic_sales_60000

--- a/retail_sales_project.ipynb
+++ b/retail_sales_project.ipynb
@@ -20,7 +20,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Load dataset\n",
-    "df = pd.read_csv(\"retail_sales_data.csv\")\n",
+    "df = pd.read_csv(\"synthetic_sales_60000.csv\")\n",
     "\n",
     "# Display first few rows\n",
     "print(df.head())\n",
